--- a/style.css
+++ b/style.css
@@ -6,11 +6,15 @@ body{
 /* First page  */
 .first-page{
     background-image:url(images/donation6.jpg);
-    background: linear-gradient(rgba(0, 0, 0, 0.493),rgba(128, 26, 26, 0.911));
-    background-image:url(images/donation6.jpg);
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-bottom: 200px;
+}
+.first-page-contain{
+    padding: 50px;
+    width: 50%;
+    margin: auto;
 }
 .first-page-content{
     font-size: 25px;
@@ -18,19 +22,55 @@ body{
     color: white;
 }
 .first-heading-design{
-    font-size: 65px;
+    font-size: 60px;
     color: white;
     margin: 0;
-    padding-top: 10%;
     text-align: center;
     
 }
-.first-link-button{
+.btn-container{
+    text-align: center;
+    margin: 50px; ;
+    height: auto;
+    width: 100%;
+
+}
+.link-button{
     text-decoration: none;
     color: white;
     background-color: salmon;
+    width: 50%;
+    margin: auto;
     border-radius: 5px;
-    margin-left: 40%;
     padding: 10px 40px;
-    /* align-items: center; */
+}
+
+/* Second Page */
+.second-page{
+
+    margin: auto;
+    width: 50%;
+
+}
+.second-page-heading{
+    font-size: 65px;
+    text-align: center;
+}
+.price-card-container{
+    display: flex;
+    margin-bottom: 100px;
+}
+.price-card{
+    padding: 30px;
+    background-color: aliceblue;
+    margin: 10px;
+    border-radius: 10px;
+}
+#top-price-card{
+    background-color: #ffeeee;
+    padding: 30px;
+    color: #FF5959;
+    border: #FF5959 solid;
+    margin: 10px;
+    border-radius: 10px;
 }
