--- a/style.css
+++ b/style.css
@@ -1,76 +1,105 @@
-body{
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
+body {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 /* First page  */
-.first-page{
-    background-image:url(images/donation6.jpg);
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-bottom: 200px;
+.first-page {
+  background-image: url(images/donation6.jpg);
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 200px;
 }
-.first-page-contain{
-    padding: 50px;
-    width: 50%;
-    margin: auto;
+.first-page-contain {
+  padding: 50px;
+  width: 50%;
+  margin: auto;
 }
-.first-page-content{
-    font-size: 25px;
-    text-align: center;
-    color: white;
+.first-page-content {
+  font-size: 25px;
+  text-align: center;
+  color: white;
 }
-.first-heading-design{
-    font-size: 60px;
-    color: white;
-    margin: 0;
-    text-align: center;
-    
+.first-heading-design {
+  font-size: 60px;
+  color: white;
+  margin: 0;
+  text-align: center;
 }
-.btn-container{
-    text-align: center;
-    margin: 50px; ;
-    height: auto;
-    width: 100%;
-
+.btn-container {
+  text-align: center;
+  margin: 50px;
+  height: auto;
+  width: 100%;
 }
-.link-button{
-    text-decoration: none;
-    color: white;
-    background-color: salmon;
-    width: 50%;
-    margin: auto;
-    border-radius: 5px;
-    padding: 10px 40px;
+.link-button {
+  text-decoration: none;
+  color: white;
+  background-color: salmon;
+  width: 50%;
+  margin: auto;
+  border-radius: 5px;
+  padding: 10px 40px;
 }
 
 /* Second Page */
-.second-page{
+.second-page {
+  margin: auto;
+  width: 50%;
+}
+.second-page-heading {
+  font-size: 65px;
+  text-align: center;
+}
+.price-card-container {
+  display: flex;
+  margin-bottom: 100px;
+}
+.price-card {
+  padding: 30px;
+  background-color: aliceblue;
+  margin: 10px;
+  border-radius: 10px;
+}
+#top-price-card {
+  background-color: #ffeeee;
+  padding: 30px;
+  color: #ff5959;
+  border: #ff5959 solid;
+  margin: 10px;
+  border-radius: 10px;
+}
 
-    margin: auto;
-    width: 50%;
-
+/* Third page */
+.third-page-heading {
+  font-size: 65px;
+  text-align: center;
 }
-.second-page-heading{
-    font-size: 65px;
-    text-align: center;
+.third-page {
+  margin-top: 200px;
 }
-.price-card-container{
-    display: flex;
-    margin-bottom: 100px;
+.blogs-container {
+  display: flex;
 }
-.price-card{
-    padding: 30px;
-    background-color: aliceblue;
-    margin: 10px;
-    border-radius: 10px;
+.blogs {
+  width: 30%;
+  margin: 2%;
+  border-radius: 30px;
+  padding: 20px;
 }
-#top-price-card{
-    background-color: #ffeeee;
-    padding: 30px;
-    color: #FF5959;
-    border: #FF5959 solid;
-    margin: 10px;
-    border-radius: 10px;
+.blogs img {
+  width: 50%;
+}
+.blogs img {
+  width: 20%;
+}
+#first-blog {
+  background-color: #f5eafa;
+}
+#second-blog {
+  background-color: #e7feeb;
+}
+#third-blog {
+  background-color: #e6f3fe;
 }
