--- a/style.css
+++ b/style.css
@@ -103,3 +103,27 @@ body {
 #third-blog {
   background-color: #e6f3fe;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Footer section */
+footer{
+  margin-top: 200px;
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
+footer span{
+  color: orangered;
+}
