--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 .link-button {
   text-decoration: none;
   color: white;
-  background-color: salmon;
+  background-color: #FF5959;
   width: 50%;
   margin: auto;
   border-radius: 5px;
@@ -103,6 +103,25 @@ body {
 #third-blog {
   background-color: #e6f3fe;
 }
+.donation-input{
+  text-align: center;
+  width: 100%;
+  /* background-color: #D9D9D9; */
+}
+.donation-input input{
+  margin-bottom: 50px;
+  font-size:20px;
+  padding: 10px 80px;
+  text-align: center;
+}
+.donation-input button{
+  font-size: 18px;
+  background-color: #FF5959;
+  padding: 10px 40px;
+  border: none;
+  border-radius: 5px;
+  color: #ffffff;
+}
 /* Extra Page */
 .extra_page{
   display: flex;
@@ -140,13 +159,15 @@ form{
 }
 form input{
   background-color: #D9D9D9;
+  font-size: 20px;
   padding: 10px;
   border: none;
   border-radius: 5px;
 }
 form button{
+  font-size: 20px;
   background-color: #FF5959;
-  padding: 10px;
+  padding: 10px 40px;
   border: none;
   border-radius: 5px;
   color: #ffffff;
